syntax = "proto3";

message PolyBox {
     bytes proposition = 1;
     int64 nonce = 2;
     int64 value = 3;
     string typeOfBox = 4;
}